infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: snehaltawade/client:latest #if we remove the latest and keep empty it assumes it is latest
          resources:
            limits:
              memory: "512Mi"
              cpu: "1"
            requests:
              memory: "256Mi"
              cpu: "500m"
          # ports:
          # - containerPort: <Port>

---
apiVersion: v1
kind: Service
metadata:
  name: client-clusterip-srv
spec:
  selector:
    app: client # type:ClusterIp: is defualt hence not specified explicitly
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
