infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: snehaltawade/comments:latest #if we remove the latest and keep empty it assumes it is latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          # ports:
          # - containerPort: <Port>

---
apiVersion: v1
kind: Service
metadata:
  name: comments-clusterip-srv
spec:
  selector:
    app: comments # type:ClusterIp: is defualt hence not specified explicitly
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
