infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: snehaltawade/moderation:latest #if we remove the latest and keep empty it assumes it is latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          # ports:
          # - containerPort: <Port>

---
apiVersion: v1
kind: Service
metadata:
  name: moderation-clusterip-srv
spec:
  selector:
    app: moderation # type:ClusterIp: is defualt hence not specified explicitly
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
