infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  type: NodePort
  selector:
    app: posts #should match name in depl file label
  ports:
    - name: posts-port
      protocol: TCP
      port: 4000 #port on which our posts application is running
      targetPort: 4000
