infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: snehaltawade/query:latest #if we remove the latest and keep empty it assumes it is latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          # ports:
          # - containerPort: <Port>

---
apiVersion: v1
kind: Service
metadata:
  name: query-clusterip-srv
spec:
  selector:
    app: query # type:ClusterIp: is defualt hence not specified explicitly
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
